# BibChecker

./: pyproject.toml
.github/metrics/: BibChecker.csv
src/bibcheck/: bibliography.py  citation.py  main.py  parse.py
